# cnpj

./: .gitignore  .pyckage  README.md  cnpj.json  setup.cfg  setup.py
data/: .cnpj-config
src/cnpj/: __init__.py  cnpj.py
src/cnpj/cnpjlib/: __init__.py  cnpjlib.py
src/cnpj/index/: index.py
src/cnpj/load/: load.py
src/cnpj/search/: search.py
src/cnpj/seek/: __init__.py  seek.py
src/cnpj/table/: __init__.py  table.py
