[metadata]
name = cnpj
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = CNPJ Information Index
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
package_dir = 
	=src
packages = 
	cnpj