[metadata]
name = cnpj
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = CNPJ Information Index
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
package_dir = 
	=src
packages = 
	cnpj
	cnpj.cnpjlib
	cnpj.index
	cnpj.load
	cnpj.seek
scripts =
    bin/cnpj
#install_requires =

python_requires = >=3.7, <4

[options.entry_points]
console_scripts =
        pyckage = pyckage:main

[options.data_files]
pyckage_data =
    templates/__init__.py.t
    templates/setup-plain.cfg.t
    templates/setup-data.cfg.t
    templates/setup-script.cfg.t
    templates/setup-github.cfg.t
    templates/setup.cfg.t
    templates/setup.py.t
    templates/package.t
    templates/.pyckage-config