[metadata]
name = cnpj
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = CNPJ Information Index
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
package_dir = 
	=src
packages = 
	cnpj
	cnpj.cnpjlib
	cnpj.index
	cnpj.load
	cnpj.seek
scripts =
    bin/cnpj
install_requires =
	requests

[options.entry_points]
console_scripts =
        cnpj = cnpj:main

[options.data_files]
cnpj_data =
	data/.cnpj-config
	data/cnpj.index